# Multi-method-solutions-for-integrals

./: .gitignore  Makefile  README.md  README.md.bak  add_func.py  add_sqrt_handler.py  check_parquet.py  fix_base.py  fix_builder.py  fix_fallback.py  fix_parser.py  fix_parser2.py  fix_parser_latex.py  fix_readme.py  fix_regex.py  fix_simple_converter.py  fix_sqrt.py  fix_verifier.py  fix_verifier2.py  fix_verifier_l5.py  pyproject.toml  rewrite_parser.py  simplify_parser.py  switch_parser.py  test_new_parser.py  test_regex.py
configs/: config.yaml  model.yaml  prompts.yaml  prompts.yaml.bak
scripts/: add_method.py  analyze_results.py  fix_all.py  fix_pipe.py  fix_pipeline.py  inspect_parquet.py  patch_eval.py  patch_evaluator.py  patch_pipe.py  refactor_pipeline.py  refactor_solve.py  run_batch.py
src/calc_solver/: schema.py
src/calc_solver/agents/: base.py  builder.py  evaluator.py  planner.py
src/calc_solver/data/: loader.py  normalizer.py
src/calc_solver/llm/: client.py  prompts.py
src/calc_solver/orchestrator/: pipeline.py  pipeline.py.bak
src/calc_solver/tools/: latex_parser.py  latex_parser.py.bak  sympy_tool.py  verifier.py
src/calc_solver/utils/: ids.py  logger.py
tests/: test_builder.py  test_evaluator.py  test_loader.py  test_pipeline.py  test_planner.py  test_sympy_tool.py  test_verifier.py
