[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calc-solver"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "sympy>=1.12",
    "antlr4-python3-runtime==4.11",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "latex2sympy2>=1.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true


